--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,24 @@
+$brown: #424245;
+$text: #fff;
+$noti-button: #0071E3;
+$noti-close: #7D7D7F;
+
+@mixin center($direction: row, $justify: center, $align: center) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+  flex-direction: $direction;
+}
+
 @font-face {
-  font-family: "San Francisco";
+  font-family: "San Francisco Regular";
   font-weight: 400;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
+
+@font-face {
+  font-family: "San Francisco Bold";
+  font-weight: 700;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
+}
+
