--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,11 @@
 @import './variables';
 
+* {
+  margin: 0;
+}
+
 body {
-  font-family: 'San Francisco', serif;
+  font-family: 'San Francisco Regular', serif;
 }
 
 
