--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,9 +1,11 @@
-$brown: #424245;
+$nav-y-padding: 250px;
+$noti-bg: #424245;
 $text: #fff;
 $noti-button: #0071E3;
 $noti-close: #7D7D7F;
 $nav-background-color: #000;
 $nav-text-color: #BCBCBC;
+$sticky-bg: #18181A;
 
 @mixin center($direction: row, $justify: center, $align: center) {
   display: flex;
