--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -4,7 +4,7 @@
   @include center($justify: space-between);
   background-color: $nav-background-color;
   color: $nav-text-color;
-  padding: 10px 200px;
+  padding: 10px $nav-y-padding;
   font-size: 12px;
 }
 
