--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,11 +1,13 @@
 $nav-y-padding: 250px;
 $noti-bg: #424245;
 $text: #fff;
-$noti-button: #0071E3;
-$noti-close: #7D7D7F;
-$nav-background-color: #000;
-$nav-text-color: #BCBCBC;
-$sticky-bg: #18181A;
+$noti-button: #0071e3;
+$noti-close: #7d7d7f;
+$nav-bg: #000;
+$nav-text: #bcbcbc;
+$sticky-bg: #18181a;
+$about-bg: #f5f5f7;
+$about-text: #8d8d91;
 
 @mixin center($direction: row, $justify: center, $align: center) {
   display: flex;
@@ -25,4 +27,3 @@ $sticky-bg: #18181A;
   font-weight: 700;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
 }
-
