--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -2,8 +2,9 @@
 
 .nav {
   @include center($justify: space-between);
-  background-color: $nav-background-color;
-  color: $nav-text-color;
+
+  background-color: $nav-bg;
+  color: $nav-text;
   padding: 10px $nav-y-padding;
   font-size: 12px;
 }
