--- a/src/components/Sticky.scss
+++ b/src/components/Sticky.scss
@@ -2,10 +2,11 @@
 
 .sticky {
   @include center($justify: space-between);
+
   position: sticky;
   top: 0;
   font-size: 22px;
-  font-family: "San Francisco Bold";
+  font-family: "San Francisco Bold", serif;
   color: $text;
   background-color: $sticky-bg;
   padding: 10px $nav-y-padding;
@@ -17,5 +18,5 @@
   border: none;
   color: $noti-bg;
   cursor: pointer;
-  padding: 5px 10px
+  padding: 5px 10px;
 }
